Reducing probe header length

--- a/eda/plot_pangenome_variants_vs_samples/plot_pangenome_variants_vs_samples.py.ipynb
+++ b/eda/plot_pangenome_variants_vs_samples/plot_pangenome_variants_vs_samples.py.ipynb
@@ -27,8 +27,8 @@
    "outputs": [],
    "source": [
     "# sanity check\n",
-    "assert len(id_and_number_of_samples_df[\"PANGENOME_VARIATION_ID\"].unique()) == \\\n",
-    "       len(id_and_number_of_samples_df[\"PANGENOME_VARIATION_ID\"])"
+    "assert len(id_and_number_of_samples_df[\"PVID\"].unique()) == \\\n",
+    "       len(id_and_number_of_samples_df[\"PVID\"])"
    ]
   },
   {
